Correctly overlapping windows

--- a/app/styles.css
+++ b/app/styles.css
@@ -170,4 +170,5 @@ ul.task-list {
 	position: fixed;
 	top:0px;
 	right:1em;
+	text-align: right;
 }
